--- a/2024-05-29/web/stilus.css
+++ b/2024-05-29/web/stilus.css
@@ -1,43 +1,88 @@
-﻿body {}
+﻿body {
+  background-image: url("hatter.png");
+  font-family: sans-serif;
+  font-size: 110%;
+  color: #444444;
+}
+
+a {
+  color: black;
+}
+
+a:hover,
+a:focus {
+  color: black;
+}
 
 #tartalom {
-    padding: 2px;
+  padding: 2px;
+  background-color: #fff;
+  width: 1100px;
+  padding-left: 10px;
+  padding-right: 10px;
+
+  margin-left: auto;
+  margin-right: auto;
 }
 
 h1,
 h2 {
-    font-family: sans-serif;
+  font-family: sans-serif;
+  color: #fc4842;
 }
 
 h2 {
-    padding: 2px;
-    clear: left;
+  padding: 2px;
+  clear: left;
+  font-style: italic;
+  background-color: #cccccc;
+  margin: 20px;
 }
 
 p {
-    text-align: ;
+  text-align: justify;
 }
 
 .bal {
-    float: ;
+  float: left;
+  margin: 0;
+  padding-right: 5px;
 }
 
 .kozep {
-    display: block;
-    margin-left: ;
-    margin-right: ;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0;
+}
+
+table {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
 }
 
 table,
 th,
 td {
-    border-collapse: collapse;
+  border-collapse: collapse;
+  border: black solid 1px;
 }
 
 td {
-    font-size: ;
+  font-size: 120%;
+  font-weight: bold;
+  width: 100px;
 }
 
 th {
-    padding: 2px;
+  padding: 2px;
+  background-color: #cccccc;
+  color: #fc4842;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.table-title {
+  text-align: center;
 }
